--- a/day_1/style.css
+++ b/day_1/style.css
@@ -1,3 +1,33 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+header {
+    text-align: center;
+    width: 100vw;
+}
+header img {
+    width: 90px;
+}
+
+form {
+    width: 100vw;
+}
+
+.search-results {
+    width: 45vw;
+}
+
+.myTeam {
+    width: 45vw;
+}
+
 .card {
     background-color: yellow;
 }
