--- a/monday/style.css
+++ b/monday/style.css
@@ -16,7 +16,10 @@ header {
     text-align: center;
     width: 100vw;
     height: 75px;
+}
 
+h1 {
+    padding: 20px;
 }
 header img {
     width: 90px;
@@ -26,6 +29,7 @@ form {
     width: 100vw;
     display: flex;
     justify-content: center;
+    padding-bottom: 15px;
 }
 
 .div1 {
@@ -56,6 +60,7 @@ form {
 .card {
     background-color: #F3D147;
     width: 20vw;
+    max-width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -90,6 +95,7 @@ li {
 .myTeam div:first-of-type{
     background-color: #F3D147;
     width: 20vw;
+    max-width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -109,9 +115,17 @@ li {
     width: 50px;
 }
 
-.previous {
+@media (max-width: 600px) {
+    .team-div {
+    }
 
-}
-.next {
+    .div1 {
+        min-height: 242px;
+        order: 9;
+    }
+    .search-bar {
+        order: 8;
+        padding: 15px;
+    }
 
 }
